[package]
name = "fara-homeassistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.11.22", features = ["json", "serde_json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
base64 = { version = "0.21.5", features = [] }
anyhow = "1.0.75"
chrono = { version ="0.4.31", features = ["serde"] }
rumqttc = { version = "0.23.0" }